Fixed Eye Icon Alignment in Login and Sign-Up Password Fields

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
   position: absolute;
   margin-top: -32px;
   margin-left: -50px;
-  margin-right: 6px;
+  margin-right: 40px;
   right: 0;
 }
 
